--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /**
  * Theme Name:  OptionTree Theme
  * Theme URI:   https://github.com/valendesigns/option-tree-theme
- * Description: This theme simply demonstrates how to integrate the OptionTree Plugin with any available theme; where no conflicts exist between them.
+ * Description: This theme simply demonstrates how to integrate the OptionTree Plugin with any theme.
  * Version:     2.3.0
  * Author:      Derek Herman
  * Author URI:  http://valendesigns.com
